[package]
name = "aws_dynamodb"
version = "0.1.0"
authors = ["Nathan Fuchs <fuchsnj@gmail.com>"]

[dependencies]
regex = "0.1.41"
rustc-serialize = "*"
chrono = "*"
hyper = "0.7"
openssl = "0.7"
time = "*"
url = "*"
xml-rs = "0.1.26"

[dependencies.aws_core]
git = "https://github.com/fuchsnj/rust_aws_core.git"

[dependencies.json_macro]
git = "https://github.com/fuchsnj/rust_json_macro"